--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,7 +32,7 @@
                 top: 3rem;
                 width: 50%;
                 min-width: 15rem;
-                background-color: white;
+                background: white;
                 padding: 2rem;
                 display: flex;
                 border-radius: 2rem;
